--- a/packages/components/src/styles/index.variables.scss
+++ b/packages/components/src/styles/index.variables.scss
@@ -1,5 +1,5 @@
 /* Global scss variables are aliases for the css variables. This file don't have to be imported, because it's injected
  * via css.preprocessorOptions.scss.additionalData into every Vue file, so it's generally available. */
-@forward "variables/color.variables";
-@forward "variables/spacing.variables";
-@forward "variables/theme.colors";
+@import "variables/color.variables";
+@import "variables/spacing.variables";
+@import "variables/theme.variables";
