--- a/packages/components/src/styles/variables/theme.variables.scss
+++ b/packages/components/src/styles/variables/theme.variables.scss
@@ -1,22 +1,22 @@
 /* Layout */
-$-n-background: var(--n-background);
-$-n-foreground: var(--n-foreground);
-$-n-divider: var(--n-divider);
-$-n-focus: var(--n-focus);
+$n-background: var(--n-background);
+$n-foreground: var(--n-foreground);
+$n-divider: var(--n-divider);
+$n-focus: var(--n-focus);
 
 /* Content */
-$-n-content-1: var(--n-content-1);
-$-n-content-2: var(--n-content-2);
-$-n-content-3: var(--n-content-3);
-$-n-content-4: var(--n-content-4);
+$n-content-1: var(--n-content-1);
+$n-content-2: var(--n-content-2);
+$n-content-3: var(--n-content-3);
+$n-content-4: var(--n-content-4);
 
 /* Base color set */
-$-n-default: var(--n-default);
-$-n-primary: var(--n-primary);
-$-n-secondary: var(--n-secondary);
-$-n-success: var(--n-success);
-$-n-warning: var(--n-warning);
-$-n-danger: var(--n-danger);
+$n-default: var(--n-default);
+$n-primary: var(--n-primary);
+$n-secondary: var(--n-secondary);
+$n-success: var(--n-success);
+$n-warning: var(--n-warning);
+$n-danger: var(--n-danger);
 
 /* Default */
 $n-default-5: var(--n-default-5);
