--- a/packages/components/src/styles/index.variables.scss
+++ b/packages/components/src/styles/index.variables.scss
@@ -3,3 +3,4 @@
 @import "variables/color.variables";
 @import "variables/spacing.variables";
 @import "variables/theme.variables";
+@import "variables/font.variables";
