feat(styles): Add helper classes, transition classes etc.

--- a/packages/components/src/styles/global/classes/font.classes.scss
+++ b/packages/components/src/styles/global/classes/font.classes.scss
@@ -6,6 +6,7 @@ body {
   font-family: $n-font-family;
   font-weight: $n-font-weight-default;
   line-height: $n-line-height-body;
+  color: $n-foreground;
 }
 
 p {
