--- a/packages/components/src/styles/global/classes/spacing.classes.scss
+++ b/packages/components/src/styles/global/classes/spacing.classes.scss
@@ -5,6 +5,7 @@ $n-spacing-list: (
         '8': $n-space-8,
         '10': $n-space-10,
         '12': $n-space-12,
+        '14': $n-space-14,
         '16': $n-space-16,
         '24': $n-space-24,
         '32': $n-space-32,
