--- a/packages/components/src/styles/index.global.scss
+++ b/packages/components/src/styles/index.global.scss
@@ -14,3 +14,5 @@
 @import "global/classes/color.classes";
 @import "global/classes/spacing.classes";
 @import "global/classes/font.classes";
+@import "global/classes/helper.classes";
+@import "global/classes/transition.classes";
