--- a/packages/components/src/styles/global/variables/spacing.global.scss
+++ b/packages/components/src/styles/global/variables/spacing.global.scss
@@ -5,6 +5,7 @@
   --n-space-8: 8px;
   --n-space-10: 10px;
   --n-space-12: 12px;
+  --n-space-14: 14px;
   --n-space-16: 16px;
   --n-space-24: 24px;
   --n-space-32: 32px;
