--- a/packages/components/src/styles/variables/spacing.variables.scss
+++ b/packages/components/src/styles/variables/spacing.variables.scss
@@ -4,6 +4,7 @@ $n-space-6: var(--n-space-6);
 $n-space-8: var(--n-space-8);
 $n-space-10: var(--n-space-10);
 $n-space-12: var(--n-space-12);
+$n-space-14: var(--n-space-14);
 $n-space-16: var(--n-space-16);
 $n-space-24: var(--n-space-24);
 $n-space-32: var(--n-space-32);
