feat(styles): Add spacing variables.

--- a/packages/components/src/styles/global/variables/spacing.global.scss
+++ b/packages/components/src/styles/global/variables/spacing.global.scss
@@ -1,5 +1,6 @@
 :root {
   --n-space-none: 0;
+  --n-space-2: 2px;
   --n-space-4: 4px;
   --n-space-6: 6px;
   --n-space-8: 8px;
@@ -7,6 +8,7 @@
   --n-space-12: 12px;
   --n-space-14: 14px;
   --n-space-16: 16px;
+  --n-space-20: 20px;
   --n-space-24: 24px;
   --n-space-32: 32px;
   --n-space-48: 48px;
