--- a/packages/components/src/styles/variables/spacing.variables.scss
+++ b/packages/components/src/styles/variables/spacing.variables.scss
@@ -1,4 +1,5 @@
 $n-space-none: var(--n-space-none);
+$n-space-2: var(--n-space-2);
 $n-space-4: var(--n-space-4);
 $n-space-6: var(--n-space-6);
 $n-space-8: var(--n-space-8);
@@ -6,6 +7,7 @@ $n-space-10: var(--n-space-10);
 $n-space-12: var(--n-space-12);
 $n-space-14: var(--n-space-14);
 $n-space-16: var(--n-space-16);
+$n-space-20: var(--n-space-20);
 $n-space-24: var(--n-space-24);
 $n-space-32: var(--n-space-32);
 $n-space-48: var(--n-space-48);
