--- a/packages/components/src/styles/global/classes/spacing.classes.scss
+++ b/packages/components/src/styles/global/classes/spacing.classes.scss
@@ -1,5 +1,6 @@
 $n-spacing-list: (
         'none': $n-space-none,
+        '2': $n-space-2,
         '4': $n-space-4,
         '6': $n-space-6,
         '8': $n-space-8,
@@ -7,6 +8,7 @@ $n-spacing-list: (
         '12': $n-space-12,
         '14': $n-space-14,
         '16': $n-space-16,
+        '20': $n-space-20,
         '24': $n-space-24,
         '32': $n-space-32,
         '48': $n-space-48,
