feat(@nova-org/components): Add normalize css.

--- a/packages/components/src/styles/index.global.scss
+++ b/packages/components/src/styles/index.global.scss
@@ -16,3 +16,4 @@
 @import "global/classes/font.classes";
 @import "global/classes/helper.classes";
 @import "global/classes/transition.classes";
+@import "global/classes/normalize.classes";
