--- a/packages/components/src/styles/global/classes/normalize.classes.scss
+++ b/packages/components/src/styles/global/classes/normalize.classes.scss
@@ -347,3 +347,12 @@ template {
 [hidden] {
   display: none;
 }
+
+/**
+ * Disable tap highlight on touchscreens
+ */
+*, *:before, *:after {
+  box-sizing: inherit;
+  -webkit-tap-highlight-color: transparent;
+  -moz-tap-highlight-color: transparent;
+}
