--- a/packages/components/src/styles/global/variables/font.global.scss
+++ b/packages/components/src/styles/global/variables/font.global.scss
@@ -20,6 +20,8 @@
   --n-font-size-h4: 1.563rem;
   --n-font-size-h5: 1.25rem;
   --n-font-size-h6: 1rem;
+  --n-font-paragraph: 1rem;
+  --n-font-paragraph-2: 0.875rem;
   --n-font-size-small: 0.8rem;
 
   /* Weights */
