--- a/packages/components/src/styles/variables/font.variables.scss
+++ b/packages/components/src/styles/variables/font.variables.scss
@@ -19,6 +19,8 @@ $n-font-size-h3: var(--n-font-size-h3);
 $n-font-size-h4: var(--n-font-size-h4);
 $n-font-size-h5: var(--n-font-size-h5);
 $n-font-size-h6: var(--n-font-size-h6);
+$n-font-size-paragraph: var(--n-font-paragraph);
+$n-font-size-paragraph-2: var(--n-font-paragraph-2);
 $n-font-size-small: var(--n-font-size-small);
 
 $n-font-weight-thin: var(--n-font-weight-thin);
